lightserv/static/main.css
body {
  background: #fafafa;
  color: #333333;
  margin-top: 5rem;
}

h1, h2, h3, h4, h5, h6 {
  color: #444444;
}


hr.class-1 { 
            border-top: 5px solid #698596;
            border-bottom: 5px solid #698596;
            margin-top: 2rem;
            margin-bottom: 2rem;
        } 
          
hr.class-2 { 
            border-top: 1px double #dddddd;
            border-bottom: 1px double #dddddd;
            margin-top: 1rem;
            margin-bottom: 1rem; 
        } 

hr.class-3 { 
            border-top: 5px solid #698596;
            border-bottom: 5px solid #698596;
            margin-top: 2rem;
        } 

hr.class-4 { 
            border-top: 5px solid #698596;
            border-bottom: 5px solid #698596;
            margin-top: 1rem;
        } 
hr.class-5 { 
            border-top: 5px solid #698596;
            border-bottom: 5px solid #698596;
            margin-top: 1rem;
            margin-botton: 1rem;
        } 


.bg-steel {
  background-color: #698596;
}

.site-header .navbar-nav .nav-link {
  color: #cbd5db;
}

.site-header .navbar-nav .nav-link:hover {
  color: #ffffff;
}

.site-header .navbar-nav .nav-link.active {
  font-weight: 500;
}

.content-section {
  background: #ffffff;
  padding: 10px 20px;
  border: 1px solid #dddddd;
  border-radius: 3px;
  margin-bottom: 20px;
  width: 100%;
}

.article-title {
  color: #444444;
}

a.article-title:hover {
  color: #428bca;
  text-decoration: none;
}

.article-content {
  white-space: pre-line;
}

.article-img {
  height: 65px;
  width: 65px;
  margin-right: 16px;
}

.article-metadata {
  padding-bottom: 1px;
  margin-bottom: 4px;
  border-bottom: 1px solid #e3e3e3
}

.article-metadata a:hover {
  color: #333;
  text-decoration: none;
}

.article-svg {
  width: 25px;
  height: 25px;
  vertical-align: middle;
}

.account-img {
  height: 125px;
  width: 125px;
  margin-right: 20px;
  margin-bottom: 16px;
}

.account-heading {
  font-size: 2.5rem;
}

#larger {
font-size: 24px;
}

code {color: #080808;
      background-color: #C0CEDD;
      font-size: 14px;
      }

.custom-control-label::before, 
.custom-control-label::after {
top: .8rem;
width: 1.25rem;
height: 1.25rem;
}

.legend { list-style: none; }
/* .legend li { float: left; margin-right: 10px; } */
.legend span { border: 1px solid #ccc; float: left; width: 35px; height: 20px; margin: 1px; }
/* your colors */
.legend .superawesome { background-color: #ff00ff; }
.legend .awesome { background-color: #00ffff; }
.legend .kindaawesome { background-color: #0000ff; }
.legend .notawesome { background-color: #000000; }

.my-legend .legend-title {
    text-align: left;
    margin-bottom: 5px;
    font-weight: bold;
    font-size: 90%;
    }
.my-legend .legend-scale ul {
  margin: 0;
  margin-bottom: 5px;
  padding: 0;
  float: left;
  list-style: none;
  }
.my-legend .legend-scale ul li {
  font-size: 100%;
  list-style: none;
  margin-left: 0;
  line-height: 18px;
  margin-bottom: 2px;
  }
.my-legend ul.legend-labels li span {
  display: block;
  float: left;
  height: 16px;
  width: 30px;
  margin-right: 5px;
  margin-left: 0;
  border: 1px solid #999;
  }
.my-legend .legend-source {
  font-size: 70%;
  color: #999;
  clear: both;
  }
.my-legend a {
  color: #777;
  }
  
.infolink:before
{
    content: '?';
    font-family: sans-serif;
    font-weight: bold;
    text-align: center;
    font-size: 2ex;
    border-radius: 1.5ex;
    margin-right: 4px;
    padding: 2px;
    color: black;
    background: white;
    border: 1px solid black;
    text-decoration: none;
}

.infolink:hover:before
{
    color: white;
    background: black;
    border-color: white;
    text-decoration: none;
}
/*
li{
  margin: 10px 0;
}*/

li.widespace { 
            margin: 10px 0;
        } 

.tableFixHead          { overflow-y: auto; height: 450px; }
.tableFixHead thead th { position: sticky; top: 0; }

table  { border-collapse: collapse; width: 100%; }
th, td { padding: 8px 16px; }
th     { background:#eee; }

.sticky-top{
  top:56px;
}

/*@media (min-width: 1200px) {
    .container{
        max-width: 1350px;
    }
}*/

